// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

model User {
  id        String   @id @db.Char(36)
  email     String   @unique @db.VarChar(100)
  password  String   @db.VarChar(100)
  name      String   @db.VarChar(100)
  address   String   @db.Text
  phone     String   @db.VarChar(20)
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  @@map("users")
}

model Book {
  id               String   @id @db.Char(36)
  title            String   @db.VarChar(100)
  category         String   @db.VarChar(100)
  cover            String   @db.VarChar(255)
  overview         String   @db.Text
  isbn             String   @db.VarChar(20)
  publication_year String   @db.Char(4)
  publisher_id     String   @db.Char(36)
  author_id        String   @db.Char(36)
  createdAt        DateTime @default(now())
  updatedAt        DateTime @updatedAt

  @@map("books")
}
